bonus/confs/gitlab/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  labels:
    app: gitlab
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  rules:
  - http:
      paths:
      - path: /gitlab
        pathType: Prefix
        backend:
          service:
            name: gitlab-service
            port:
              number: 80
